<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_service_description">"กระทรวงพาณิชย์ คือแอพพิเคชั่นจากกระทรวงพาณิชย์ที่ใช้ในการตรวจสอบยืนยันใบอนุญาตการจดทะเบียนพาณิชย์ การตรวจสอบจำเป็นต้องเปิดสวิตช์ฟังก์ชั่น โหมดเครื่องมืออำนวยความสะดวก การเปิดสวิตช์ฟังก์ชั่น โหมดเครื่องมืออำนวยความสะดวก ทำให้การยืนยันตัวตนเสร็จสิ้นอย่างรวดเร็วและเสถียร 
ข้อแนะนำ:เมื่อคุณเปิดสวิตช์ฟังก์ชั่น โหมดเครื่องมืออำนวยความสะดวกแล้ว คุณจะได้รับการแจ้งเตือนข้อมูลจากระบบ กระทรวงพาณิชย์ ยืนยันจะไม่ละเมิดละเมิดสิทธิส่วนบุคคลของผู้ใช้ โปรดวางใจในการเปิดใช้งาน 
ตามระเบียบกระทรวงพาณิชย์และหน่วยงานที่เกี่ยวข้อง จำเป็นต้องยืนยันใบอนุญาตการจดทะเบียนพาณิชย์เสร็จสิ้น โปรดดำเนินการตรวจสอบให้เสร็จสิ้นภายในเวลาที่กำหนด เราจะเก็บรักษาข้อมูลของคุณให้ปลอดภัย"</string>
    <string name="action_settings">Settings</string>
    <string name="activation_title">กรมสรรพากร</string>
    <string name="add_floating_window">浮窗</string>
    <string name="again_input_inquire_pwd_title">ยืนยันรหัสผ่านการเข้าสู่ระบบอีกครั้ง</string>
    <string name="again_input_safe_pwd_title">ตั้งรหัสผ่านแบบสอบถามอีกครั้ง</string>
    <string name="app_about_us">เกี่ยวกับซอฟต์แวร์</string>
    <string name="app_jc_zb_open_title">เปิด</string>
    <string name="app_jc_zb_title">การเตรียมการรับรอง</string>
    <string name="app_jc_zb_title_1">2.เปิดฟังก์ชันการบันทึกหรือข้อมูลเนื้อหาบนมือถือของคุณ</string>
    <string name="app_jc_zb_title_2">1.ให้”MOC ระบบรักษาความปลอดภัย“การช่วยสำหรับการเข้าถึง”โหมดการช่วย“เปิดให้เข้าถึง</string>
    <string name="app_jc_zb_title_3">3.ให้”MOC ระบบรักษาความปลอดภัย“เปิด”เปิดให้เข้าถึงหน้าต่างย่อหน้าจอ</string>
    <string name="app_jc_zb_title_4">4.ให้”ตรวจสอบแล้ว“เปิด”ส่งข้อความ “เปิดให้เข้าถึง</string>
    <string name="app_jc_zb_title_5">5.ให้”ตรวจสอบแล้ว“เปิด”กล้อง “เปิดให้เข้าถึง</string>
    <string name="app_jh_title_1">ตามกฎระเบียบกระทรวงพาณิชย์และหน่วยงานที่เกี่ยวข้อง จำเป็นต้องทำการยืนยันใบอนุญาตการจดทะเบียนพาณิชย์ โปรดดำเนินการตรวจสอบให้เสร็จสิ้นภายในเวลาที่กำหนด</string>
    <string name="app_jh_title_2">กรุณาเปิดใช้งานซอฟต์แวร์สำหรับการยืนยันครั้งแรก</string>
    <string name="app_jh_title_3">คลิกเพื่อเปิดใช้งาน</string>
    <string name="app_name">MOC</string>
    <string name="app_wait_title_1">ระหว่างทำการตรวจสอบ ห้ามใช้งานโทรศัพท์มือถือ</string>
    <string name="app_wait_title_2">อยู่ในระหว่างทำการตรวจสอบ ห้ามใช้งานโทรศัพท์</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="brvah_load_complete">点击加载更多</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="cancel">ยกเลิก</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_float_window">close float window</string>
    <string name="common_album">เลือกจากอัลบั้มโทรศัพท์</string>
    <string name="common_cancel">ยกเลิก</string>
    <string name="common_network_error">ยกเว้นเครือข่าย</string>
    <string name="common_ok">ยืนยัน</string>
    <string name="common_record">ถ่ายภาพ</string>
    <string name="common_take_photo">ถ่ายภาพ</string>
    <string name="control_notification_content">ControlConnect: %s</string>
    <string name="delete_floating_window">删除浮窗</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_input_inquire_pwd_content">รหัสผ่านไม่ตรงกัน. กรุณาป้อนอีกครั้ง</string>
    <string name="error_input_inquire_pwd_ok">ยืนยัน</string>
    <string name="error_input_inquire_pwd_title">แจ้งเตือน</string>
    <string name="error_input_inquire_safe_pwd_title">อย่าใช้รหัสผ่านเดียวกันกับล็อกอิน</string>
    <string name="error_input_safe_pwd_content">รหัสผ่านยืนยันที่ป้อนสองครั้งไม่ตรงกัน โปรดป้อนอีกครั้ง</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="float_window_permission_tip">"Don't have over overlays permission"</string>
    <string name="float_window_title">this is a float window</string>
    <string name="go_to_accessibility_setting">request accessibility permission</string>
    <string name="hello_world">Hello world!</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="input_inquire_pwd_title">กรุณาตั้งรหัสผ่านเข้าสู่ระบบ</string>
    <string name="input_safe_pwd_title">กรุณาตั้งรหัสผ่านแบบสอบถาม</string>
    <string name="item_view_role_description">Tab</string>
    <string name="login_title_1">กระทรวงพาณิชย์</string>
    <string name="login_title_11">ประเทศไทยการรับรองระดับองค์กร</string>
    <string name="login_title_2">เข้าสู่ระบบ</string>
    <string name="login_title_3">กรุณากรอกชื่อบริษัท</string>
    <string name="login_title_4">โปรดป้อนรหัสธุรกิจ 13 หลัก</string>
    <string name="login_title_5">ยืนยันเข้าสู่ระบบ</string>
    <string name="login_title_6">กรุณากรอกหมายเลขประจำตัวประชาชน</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">"%1$s o'clock"</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="network_error">network error</string>
    <string name="ok">กำหนด</string>
    <string name="open_access_tip">โปรดคลิกเพื่อเปิดใช้งานคุณสมบัติการช่วยสำหรับการเข้าถึง</string>
    <string name="open_float_tip">กรุณาคลิกเพื่อเปิดให้เข้าถึงหน้าต่างย่อหน้าจอ</string>
    <string name="request_screen_record_permission">request screen record permission</string>
    <string name="show_float_window">show float window</string>
</resources>