<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:orientation="vertical" android:background="@color/color_01_16_41" android:fitsSystemWindows="true" android:clipToPadding="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="75.0dip">
            <ImageView android:id="@id/llTop" android:background="@drawable/jd_loan_login_top_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="centerCrop" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:textSize="@dimen/dimen_20" android:textColor="@color/color_ff_ff_ff" android:gravity="center_horizontal" android:id="@id/tv_top" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/login_title_1" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/llTop" />
            <TextView android:textSize="@dimen/dimen_20" android:textColor="@color/color_00_ba_ff" android:gravity="center_horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/login_title_11" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_top" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/app_shape_ffffff_10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginStart="15.0dip" android:layout_marginEnd="15.0dip">
            <TextView android:textSize="@dimen/dimen_20" android:textColor="@color/color_00_ba_ff" android:id="@id/tv_top_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/login_title_2" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <EditText android:textSize="@dimen/dimen_15" android:textColor="@color/color_0d_0d_0d" android:textColorHint="@color/color_8c_9a_a8" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/etNick" android:background="@drawable/app_shape_f1f3f8_10" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_60" android:layout_marginTop="@dimen/dimen_20" android:hint="@string/login_title_3" android:singleLine="true" android:drawablePadding="@dimen/dimen_10" android:inputType="text" android:paddingStart="10.0dip" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_top_title" />
            <EditText android:textSize="@dimen/dimen_15" android:textColor="@color/color_0d_0d_0d" android:textColorHint="@color/color_8c_9a_a8" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/etIden" android:background="@drawable/app_shape_f1f3f8_10" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_60" android:layout_marginTop="@dimen/dimen_20" android:hint="@string/login_title_4" android:singleLine="true" android:drawablePadding="@dimen/dimen_10" android:inputType="number" android:paddingStart="10.0dip" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/etNick" />
            <EditText android:textSize="@dimen/dimen_15" android:textColor="@color/color_0d_0d_0d" android:textColorHint="@color/color_8c_9a_a8" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/etIdCard" android:background="@drawable/app_shape_f1f3f8_10" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_60" android:layout_marginTop="@dimen/dimen_20" android:hint="@string/login_title_6" android:singleLine="true" android:drawableLeft="@drawable/idencard" android:drawablePadding="@dimen/dimen_10" android:inputType="text" android:paddingStart="10.0dip" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/etIden" />
            <View android:layout_width="0.0dip" android:layout_height="50.0dip" android:layout_marginTop="@dimen/dimen_15" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/etIdCard" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView android:textSize="@dimen/dimen_15" android:textColor="@color/color_ff_ff_ff" android:gravity="center" android:id="@id/tvLogin" android:background="@drawable/app_shape_ffcc00_25" android:layout_width="fill_parent" android:layout_height="55.0dip" android:layout_marginTop="-35.0dip" android:text="@string/login_title_5" android:layout_marginStart="30.0dip" android:layout_marginEnd="30.0dip" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>