<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/color_01_16_41" android:fitsSystemWindows="true" android:clipToPadding="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/topView" android:background="@color/color_01_16_41" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_44">
        <ImageButton android:id="@id/iv_left" android:background="@null" android:paddingLeft="@dimen/dimen_12" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/jd_back" android:scaleType="centerInside" android:onClick="onBackClick" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="@dimen/dimen_16" android:textStyle="bold" android:textColor="@color/color_ff_ff_ff" android:gravity="center_vertical" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="fill_parent" android:singleLine="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <ImageView android:id="@id/iv_right" android:paddingRight="@dimen/dimen_16" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:scaleType="centerInside" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="@dimen/dimen_13" android:textColor="@color/color_ff_ff_ff" android:gravity="center_vertical" android:id="@id/tv_right" android:paddingLeft="@dimen/dimen_10" android:paddingRight="@dimen/dimen_16" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.core.widget.NestedScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip">
                <ImageView android:id="@id/llTop" android:background="@drawable/jd_loan_login_top_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="centerCrop" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
                <TextView android:textSize="@dimen/dimen_18" android:textColor="@color/color_ff_ff_ff" android:gravity="center_horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/app_jh_title_1" android:layout_marginStart="15.0dip" android:layout_marginEnd="15.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/llTop" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView android:textSize="@dimen/dimen_15" android:textColor="@color/color_ff_ff_ff" android:gravity="center_horizontal" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/app_jh_title_2" android:layout_marginStart="15.0dip" android:layout_marginEnd="15.0dip" />
            <TextView android:textSize="@dimen/dimen_15" android:textColor="@color/color_ff_ff_ff" android:gravity="center" android:id="@id/tvJh" android:background="@drawable/active_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="80.0dip" android:text="@string/app_jh_title_3" android:layout_marginStart="30.0dip" android:layout_marginEnd="30.0dip" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>