<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/layout" android:background="@color/color_01_16_41" android:fitsSystemWindows="true" android:clipToPadding="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/topView" android:background="@color/color_01_16_41" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_60">
        <TextView android:textSize="@dimen/dimen_14" android:textStyle="bold" android:textColor="@color/color_ff_ff_ff" android:gravity="center_vertical" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="fill_parent" android:singleLine="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <ImageView android:id="@id/iv" android:layout_width="50.0dip" android:layout_height="50.0dip" android:scaleType="centerCrop" android:layout_marginEnd="10.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.core.widget.NestedScrollView android:orientation="vertical" android:background="@color/color_ff_ff_ff" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:background="@color/color_ff_ff_ff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/dimen_15" android:textColor="@color/color_00_00_00" android:id="@id/tvFz" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" android:text="@string/app_jc_zb_title_2" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/ivFz" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
                    <ImageView android:id="@id/ivFz" android:background="@drawable/app_open_selector" android:layout_width="28.0dip" android:layout_height="28.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView android:textSize="@dimen/dimen_15" android:textColor="@color/color_27_43_ab" android:gravity="center" android:id="@id/tvFzOpen" android:background="@drawable/app_shape_2743ab_25" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_jc_zb_open_title" android:paddingStart="15.0dip" android:paddingEnd="15.0dip" />
                <View android:background="@color/color_cc_cc_cc" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="15.0dip" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/dimen_15" android:textColor="@color/color_00_00_00" android:id="@id/tvVideo" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" android:text="@string/app_jc_zb_title_1" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/ivVideo" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
                    <ImageView android:id="@id/ivVideo" android:background="@drawable/app_open_selector" android:layout_width="28.0dip" android:layout_height="28.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView android:textSize="@dimen/dimen_15" android:textColor="@color/color_27_43_ab" android:gravity="center" android:id="@id/tvVideoOpen" android:background="@drawable/app_shape_2743ab_25" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_jc_zb_open_title" android:paddingStart="15.0dip" android:paddingEnd="15.0dip" />
                <View android:background="@color/color_cc_cc_cc" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="15.0dip" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/dimen_15" android:textColor="@color/color_00_00_00" android:id="@id/tvXf" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" android:text="@string/app_jc_zb_title_3" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/ivXf" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
                    <ImageView android:id="@id/ivXf" android:background="@drawable/app_open_selector" android:layout_width="28.0dip" android:layout_height="28.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView android:textSize="@dimen/dimen_15" android:textColor="@color/color_27_43_ab" android:gravity="center" android:id="@id/tvXfOpen" android:background="@drawable/app_shape_2743ab_25" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_jc_zb_open_title" android:paddingStart="15.0dip" android:paddingEnd="15.0dip" />
                <View android:background="@color/color_cc_cc_cc" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="15.0dip" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/dimen_15" android:textColor="@color/color_00_00_00" android:id="@id/tvMsg" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" android:text="@string/app_jc_zb_title_4" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/ivMsg" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
                    <ImageView android:id="@id/ivMsg" android:background="@drawable/app_open_selector" android:layout_width="28.0dip" android:layout_height="28.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView android:textSize="@dimen/dimen_15" android:textColor="@color/color_27_43_ab" android:gravity="center" android:id="@id/tvMsgOpen" android:background="@drawable/app_shape_2743ab_25" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_jc_zb_open_title" android:paddingStart="15.0dip" android:paddingEnd="15.0dip" />
                <View android:background="@color/color_cc_cc_cc" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="15.0dip" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/dimen_15" android:textColor="@color/color_00_00_00" android:id="@id/tvCamera" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" android:text="@string/app_jc_zb_title_5" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/ivCamera" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
                    <ImageView android:id="@id/ivCamera" android:background="@drawable/app_open_selector" android:layout_width="28.0dip" android:layout_height="28.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView android:textSize="@dimen/dimen_15" android:textColor="@color/color_27_43_ab" android:gravity="center" android:id="@id/tvCameraOpen" android:background="@drawable/app_shape_2743ab_25" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_jc_zb_open_title" android:paddingStart="15.0dip" android:paddingEnd="15.0dip" />
                <View android:background="@color/color_cc_cc_cc" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="15.0dip" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>